Adding deep cive into map, set, and tree versions.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -2758,9 +2758,390 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f3e91cb",
+   "metadata": {},
+   "source": [
+    "# Sets In-Depth\n",
+    "\n",
+    "Note that `add` and `remove` return a boolean in `List` too (except for inserting in the middle).\n",
+    "\n",
+    "Note that unlike in some languages/libraries, and unlike retrieving a non-existent item from a `List`, very few operations on Sets will throw.  They will return boolean to let you know what happened.\n",
+    "\n",
+    "A lot of operations that are just like list or inherited from object are not mentioned here.  In general, you can assume collection-like things (`toArray`, `hashCode`, `clear`, `isEmpty`, `forEach`, `removeIf`, etc.) will work the same way.\n",
+    "\n",
+    "Note: most of these take collections, not varargs array inputs.\n",
+    "\n",
+    "Summary of methods that __return boolean__ (except for `contains` and `containsAll` which is obvious) - these are idempotent set operations that mutate the set and return true if anything at all changed.  Because of the idempotency, you don't have to check membership before removing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c6aacbbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding new item: true\n",
+      "Adding existing item: false\n",
+      "Adding list: true\n",
+      "Contains 10: true\n",
+      "Contains 10 and 20: true\n",
+      "Remove 10 when exists: true\n",
+      "Remove 10 when not exists: false\n",
+      "[20, 30]\n",
+      "Remove 10 and 20: true\n",
+      "[30]\n",
+      "Remove 20 and 30: true\n",
+      "Remove 10 and 20: false\n",
+      "[]\n",
+      "Retain only 20: false\n",
+      "[]\n",
+      "[10]\n",
+      "Retain only 10: false\n",
+      "[10]\n",
+      "\n",
+      "{10, 20} INTERSECT {20, 30}: [20]\n",
+      "{20} UNION {10, 20}: [20, 10]\n",
+      "{10, 20} EXCEPT {10, 30}: [20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class SetDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Set<Integer> s = new HashSet<>();\n",
+    "        \n",
+    "        s.add(10);  // this we already know\n",
+    "        \n",
+    "        // add() returns boolean indicating if it was a new entry or not\n",
+    "        System.out.println(\"Adding new item: \" + s.add(20));\n",
+    "        System.out.println(\"Adding existing item: \" + s.add(10));\n",
+    "        \n",
+    "        // addAll() returns true if at least 1 thing added\n",
+    "        System.out.println(\"Adding list: \" + s.addAll(List.of(10, 20, 30)));\n",
+    "        \n",
+    "        // membership check\n",
+    "        System.out.println(\"Contains 10: \" + s.contains(10));\n",
+    "        System.out.println(\"Contains 10 and 20: \" + s.containsAll(List.of(10, 20)));\n",
+    "        \n",
+    "        // removal\n",
+    "        System.out.println(\"Remove 10 when exists: \" + s.remove(10));\n",
+    "        System.out.println(\"Remove 10 when not exists: \" + s.remove(10));\n",
+    "        System.out.println(s);\n",
+    "        System.out.println(\"Remove 10 and 20: \" + s.removeAll(Set.of(10, 20)));\n",
+    "        System.out.println(s);\n",
+    "        System.out.println(\"Remove 20 and 30: \" + s.removeAll(Set.of(20, 30)));\n",
+    "        // confusingly, this is false because the set wasn't changed\n",
+    "        System.out.println(\"Remove 10 and 20: \" + s.removeAll(Set.of(10, 20)));\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        // retention\n",
+    "        System.out.println(\"Retain only 20: \" + s.retainAll(Set.of(20)));\n",
+    "        System.out.println(s);\n",
+    "        s.add(10);\n",
+    "        System.out.println(s);\n",
+    "        System.out.println(\"Retain only 10: \" + s.retainAll(Set.of(10)));\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        // traditional set operations\n",
+    "        System.out.println();\n",
+    "        s = new HashSet<>();\n",
+    "        s.addAll(List.of(10, 20));\n",
+    "        \n",
+    "        s.retainAll(Set.of(20, 30));\n",
+    "        System.out.println(\"{10, 20} INTERSECT {20, 30}: \" + s);\n",
+    "        \n",
+    "        s.addAll(Set.of(10, 20));\n",
+    "        System.out.println(\"{20} UNION {10, 20}: \" + s);\n",
+    "        \n",
+    "        s.removeAll(Set.of(10, 30));\n",
+    "        System.out.println(\"{10, 20} EXCEPT {10, 30}: \" + s);\n",
+    "    }\n",
+    "}\n",
+    "SetDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e857ba",
+   "metadata": {},
+   "source": [
+    "# TreeSet In-Depth\n",
+    "\n",
+    "`TreeSet` obeys all the members of `Set` mentioned above, but lookup will be __O(logN)__ because it's a balanced binary tree instead of a typical hash table.  This is where __idempotency__ becomes even more important, so that you don't look up and then remove, for instance, incurring twice the penalty.\n",
+    "\n",
+    "Note: you can __construct__ it with a collection, a sorted set, or a comparator too.\n",
+    "\n",
+    "In addition, and in order to get the benefit of the fact that it's sorted, `TreeSet` implements `NavigableSet` which extends `SortedSet`.  The members of both interfaces are shown below.\n",
+    "\n",
+    "`SortedSet` members basically treat set members as indices and will throw if you try to get a `first` or `last` on an empty set.\n",
+    "\n",
+    "`NavigableSet` members treat it like a sequence of numbers and do math-like operations, returning `null` for non-existent things.  It also has `descending` members to reverse the sequence (less becomes greater logically), and `pollFirst()` and `pollLast()` to get nullable values for first and last, instead of throwing if not present."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "861453d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n",
+      "First: 10\n",
+      "Last: 30\n",
+      "Head Set: [10]\n",
+      "Tail Set: [20, 30]\n",
+      "Sub Set: [10, 20]\n",
+      "\n",
+      "Ceiling: 20\n",
+      "Floor: 10\n",
+      "Higher: 20\n",
+      "Lower: 10\n",
+      "Lower: null\n",
+      "Poll First: 10\n",
+      "Descending Set: [30, 20]\n",
+      "Descending Set Ceiling: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class TreeSetDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Set<Integer> s = new TreeSet<>();\n",
+    "        s.addAll(List.of(10, 20, 30));\n",
+    "        System.out.println(s);\n",
+    "        \n",
+    "        // SortedSet members\n",
+    "        SortedSet<Integer> sorted = (SortedSet<Integer>)s;\n",
+    "        System.out.println(\"First: \" + sorted.first());\n",
+    "        System.out.println(\"Last: \" + sorted.last());\n",
+    "        // views (like subSet)\n",
+    "        System.out.println(\"Head Set: \" + sorted.headSet(20));\n",
+    "        System.out.println(\"Tail Set: \" + sorted.tailSet(20));\n",
+    "        System.out.println(\"Sub Set: \" + sorted.subSet(10, 30));\n",
+    "        \n",
+    "        // NavigableSet members\n",
+    "        System.out.println();\n",
+    "        NavigableSet<Integer> nav = (NavigableSet<Integer>)s;\n",
+    "        System.out.println(\"Ceiling: \" + nav.ceiling(15));\n",
+    "        System.out.println(\"Floor: \" + nav.floor(15));\n",
+    "        System.out.println(\"Higher: \" + nav.higher(10));\n",
+    "        System.out.println(\"Lower: \" + nav.lower(20));\n",
+    "        System.out.println(\"Lower: \" + nav.lower(10));\n",
+    "        System.out.println(\"Poll First: \" + nav.pollFirst()); // null if empty\n",
+    "        System.out.println(\"Descending Set: \" + nav.descendingSet());\n",
+    "        System.out.println(\"Descending Set Ceiling: \" + nav.descendingSet().ceiling(40));\n",
+    "    }\n",
+    "}\n",
+    "TreeSetDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0efa7099",
+   "metadata": {},
+   "source": [
+    "# Map In-Depth\n",
+    "\n",
+    "Members already discussed above are not repeated here.  Not that in some cases, the ways of doing things shown here might not be desirable if using an O(1) type map (eg. a HashMap).  But if using a TreeMap where key lookup is not O(1), it may be helpful for a constant speedup.  You may, however, want to encapsulate some of the ugliness of the methods used for that in helper methods to avoid repeating strange things.  For an O(1) map, these things might even be slower due to the use of functional interfaces where simple operations will do.\n",
+    "\n",
+    "In addition to what's shown here:\n",
+    "- `putAll()` puts all the values of another map and returns nothing\n",
+    "\n",
+    "Note: the `compute` variants  and `putIfAbsent` can be tricked by a map that has `null` values into thinking a mapping is not present."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "3a6e09a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{a=10}\n",
+      "put existing: 10\n",
+      "put non-existing: null\n",
+      "put if absent: 20\n",
+      "{a=20, b=30}\n",
+      "get non-existing: null\n",
+      "get existing null: null\n",
+      "contains on null value: true\n",
+      "contains on key with null value: true\n",
+      "400\n",
+      "{a=400, b=30, c=null}\n",
+      "0\n",
+      "{a=400, b=30, c=null, d=0}\n",
+      "100\n",
+      "{a=400, b=30, c=null, d=0, e=100}\n",
+      "100\n",
+      "{a=400, b=30, c=null, d=0, e=100}\n",
+      "null\n",
+      "10000\n",
+      "{a=400, b=30, c=null, d=0, e=10000}\n",
+      "a 400\n",
+      "b 30\n",
+      "c null\n",
+      "d 0\n",
+      "e 10000\n",
+      "{a=400, b=30, c=null, d=0, e=10000}\n",
+      "Remove a: 400\n",
+      "{b=30, c=null, d=0, e=10000}\n",
+      "Remove c: null\n",
+      "{b=30, d=0, e=10000}\n",
+      "Remove h: null\n",
+      "{b=30, d=0, e=10000}\n",
+      "Remove b 100: false\n",
+      "{b=30, d=0, e=10000}\n",
+      "Remove b 30: true\n",
+      "{d=0, e=10000}\n",
+      "Replace d 1000: 0\n",
+      "Replace a 1000: null\n",
+      "{d=1000, e=10000}\n",
+      "\n",
+      "{a=[100, 200]}\n",
+      "\n",
+      "{a=2}\n",
+      "{a=1}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class MapDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Map<String, Integer> m = new HashMap<>();\n",
+    "        m.put(\"a\", 10);\n",
+    "        System.out.println(m);\n",
+    "        \n",
+    "        // Return value of put()\n",
+    "        System.out.println(\"put existing: \" + m.put(\"a\", 20)); // previous value\n",
+    "        System.out.println(\"put non-existing: \" + m.put(\"b\", 30)); // null\n",
+    "        \n",
+    "        // very polite put\n",
+    "        System.out.println(\"put if absent: \" + m.putIfAbsent(\"a\", 100000)); // null would mean added\n",
+    "        System.out.println(m);\n",
+    "        \n",
+    "        // null from get()\n",
+    "        System.out.println(\"get non-existing: \" + m.get(\"c\"));\n",
+    "        m.put(\"c\", null);\n",
+    "        System.out.println(\"get existing null: \" + m.get(\"c\"));\n",
+    "        System.out.println(\"contains on null value: \" + m.containsValue(null));\n",
+    "        System.out.println(\"contains on key with null value: \" + m.containsKey(\"c\"));\n",
+    "        \n",
+    "        // compute() and variants\n",
+    "        System.out.println(m.compute(\"a\", (k, v) -> v * v)); // returns NEW value\n",
+    "        System.out.println(m); // value updated\n",
+    "        // v comes in null, and then this adds a new key-value pair\n",
+    "        System.out.println(m.compute(\"d\", (k, v) -> v == null ? 0 : v * v));\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(m.computeIfAbsent(\"e\", k -> 100));\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(m.computeIfAbsent(\"e\", k -> 1000)); // existing value\n",
+    "        System.out.println(m); // no change\n",
+    "        System.out.println(m.computeIfPresent(\"f\", (k, v) -> v * v)); // null and no change\n",
+    "        System.out.println(m.computeIfPresent(\"e\", (k, v) -> v * v)); // new value\n",
+    "        System.out.println(m);\n",
+    "        \n",
+    "        // forEach\n",
+    "        m.forEach((k, v) -> System.out.printf(\"%s %d\\n\", k, v));\n",
+    "        \n",
+    "        // removal\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(\"Remove a: \" + m.remove(\"a\")); // gets value that was removed\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(\"Remove c: \" + m.remove(\"c\")); // null and removed\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(\"Remove h: \" + m.remove(\"h\")); // null and no change\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(\"Remove b 100: \" + m.remove(\"b\", 100)); // false\n",
+    "        System.out.println(m);\n",
+    "        System.out.println(\"Remove b 30: \" + m.remove(\"b\", 30)); // true\n",
+    "        System.out.println(m);\n",
+    "        \n",
+    "        // replacement\n",
+    "        System.out.println(\"Replace d 1000: \" + m.replace(\"d\", 1000)); // old value\n",
+    "        System.out.println(\"Replace a 1000: \" + m.replace(\"a\", 1000)); // null (no change)\n",
+    "        System.out.println(m);\n",
+    "        // other overloads:\n",
+    "        // provide key and value to replace with value\n",
+    "        // bifunction of key and value to value (returning void)\n",
+    "        \n",
+    "        // Create list value inline\n",
+    "        // You would probably want a helper method if you do this a lot\n",
+    "        System.out.println();\n",
+    "        Map<String, List<Integer>> m2 = new HashMap<>();\n",
+    "        m2.computeIfAbsent(\"a\", k -> new ArrayList<>()).add(100);\n",
+    "        m2.computeIfAbsent(\"a\", k -> new ArrayList<>()).add(200);\n",
+    "        System.out.println(m2);\n",
+    "        \n",
+    "        // merge(key, defaultValue, binaryOperatorToCombineValues)\n",
+    "        // if key is present, operator is called on defaultValue and existing value\n",
+    "        // if the operator returns null, the key is removed\n",
+    "        // returns new value or null\n",
+    "        \n",
+    "        // Create count inline\n",
+    "        System.out.println();\n",
+    "        Map<String, Integer> m3 = new HashMap<>();\n",
+    "        m3.merge(\"a\", 1, Integer::sum);\n",
+    "        m3.merge(\"a\", 1, Integer::sum);\n",
+    "        System.out.println(m3);\n",
+    "        \n",
+    "        // Decrement count and dissappear on zero\n",
+    "        m3.merge(\"a\", -1, (a, b) -> a + b == 0 ? null : a + b);\n",
+    "        System.out.println(m3);\n",
+    "        m3.merge(\"a\", -1, (a, b) -> a + b == 0 ? null : a + b);\n",
+    "        System.out.println(m3); // key is gone now\n",
+    "    }\n",
+    "}\n",
+    "MapDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa4bcf21",
+   "metadata": {},
+   "source": [
+    "# TreeMap In-Depth\n",
+    "\n",
+    "The situation is very similar to `TreeSet`, including a `SortedMap` and `NavigableMap` interface in the same way.\n",
+    "\n",
+    "The main difference here is that some of the methods are about keys, some are about the whole map, and some are about entries.  On a superficial level, it looks very inconsistent.\n",
+    "\n",
+    "Also note that the more atomic operations listed above for maps may be more helpful here as well (eg. getting and updating a value for a key at the same time).\n",
+    "\n",
+    "Note the following:\n",
+    "- `navigableKeySet()` will give you the keys as a `NavigableSet` (as in TreeSet)\n",
+    "    - but `keySet()` will also maintain the order\n",
+    "- by default you can assume most operations (eg. ceiling, higher, etc.) have a key and an entry variant\n",
+    "    - eg. `floorKey` and `ceilingEntry`\n",
+    "    - the entry variant is for updating the map in-place without re-querying\n",
+    "- `descendingMap()` gives you a reversed view\n",
+    "- `firstEntry()`, `lastEntry()`, `firstKey()`, `lastKey()`\n",
+    "- methods that give back multiple entries (eg. head, tail, submap) are about maps instead of keys or entries\n",
+    "    - `subMap`, `headMap`, `tailMap`\n",
+    "- `pollFirstEntry` and `pollLastEntry` instead of keys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9038ea20",
+   "id": "d9e4e528",
    "metadata": {},
    "outputs": [],
    "source": []
