Adding detail about nested wildcards.

--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -649,6 +649,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04aa6c26",
+   "metadata": {},
+   "source": [
+    "# Wildcards With Nested Generics\n",
+    "\n",
+    "The first example really looks like and feels like it should work, but it does not.  Because no casting is allowed between generics, `List<Integer>` can't be assigned as `List<?>` in a higher structure without using a wildcard for that, as in the 2nd and 3rd examples.\n",
+    "\n",
+    "The 4th and 5th examples show that this problem is hidden if you use the single diamond operator to let the compiler infer the type for you.\n",
+    "\n",
+    "The 6th example shows that technically when you do `<? extends Comparable<?>>` that is a 3rd type being introduced.\n",
+    "\n",
+    "The 7th example just shows that you sometimes still need \\<T> out in front to be able to do some things, as ? can't refer to ? as a different thing.\n",
+    "\n",
+    "The remaining examples just show that this applies to any generic wrapping another generic, including your own you might define.\n",
+    "\n",
+    "Also, note that if you have the exact types on the left and right side, it is ok.  It's just an issue with how wildcards are handled.\n",
+    "\n",
+    "The final example shows that you could use a wildcard on the right hand side to match a type that indirectly expects a wildcard too, but that only works if not the top level.  Think of it as the outer level holding lefthand variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c2715bf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class WildcardDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // ILLEGAL \n",
+    "        // List<List<?>> l = new ArrayList<List<Integer>>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<? extends List<?>> l = new ArrayList<List<Integer>>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<? extends List<? extends Comparable<?>>> l2 = new ArrayList<List<Integer>>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<List<?>> l3 = new ArrayList<>();\n",
+    "        List<List<? extends Comparable<?>>> l4 = new ArrayList<>();\n",
+    "        List<? extends List<? extends Comparable<?>>> l4b = new ArrayList<List<Integer>>();\n",
+    "        \n",
+    "        // ILLEGAL\n",
+    "        // List<List<? extends Comparable<? super ?>>> l4 = new ArrayList<>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<Set<String>> l5 = new ArrayList<>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<Set<String>> l6 = new ArrayList<Set<String>>();\n",
+    "        \n",
+    "        // ILLEGAL\n",
+    "        // List<Set<?>> l7 = new ArrayList<Set<String>>();\n",
+    "        \n",
+    "        // OK\n",
+    "        List<List<?>> l8 = new ArrayList<List<?>>();\n",
+    "    }\n",
+    "}\n",
+    "WildcardDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd74f806",
    "metadata": {},
    "source": [
@@ -670,7 +736,9 @@
    "source": [
     "# \\<T extends Comparable<\\? super T>>\n",
     "\n",
-    "This is an idiom you see a lot in collections static methods in the standard library.  It means that we'll take classes that implement Comparable on lower level interfaces than the class itself.  For instance, if you had an Animal class that was comparable, and then a Dog sublcass that did not need to reimplement that interface."
+    "This is an idiom you see a lot in collections static methods in the standard library.  It means that we'll take classes that implement Comparable on lower level interfaces than the class itself.  For instance, if you had an Animal class that was comparable, and then a Dog sublcass that did not need to reimplement that interface.\n",
+    "\n",
+    "Note: `? extends Comparable<?>` also works!"
    ]
   },
   {
