Adding more info from practice.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1678,7 +1678,9 @@
     "    \n",
     "Do default methods make an interface into an ABC (abstract base class)?  Not quite!  Because an interface has __no variables__. However, it can be a way to get around the multiple inheritance limitation.\n",
     "\n",
-    "NOTE: default methods are effectively new public abstract methods that happen to have default implementations.  They do not have the same name as any other method of the interface and are part of the interface, though a subclass is free to not provide it and let the default happen."
+    "NOTE: default methods are effectively new public abstract methods that happen to have default implementations.  They do not have the same name as any other method of the interface and are part of the interface, though a subclass is free to not provide it and let the default happen.\n",
+    "\n",
+    "NOTE: default methods can call abstract members, such as in `Iterable.forEach` which calls `hasNext()` and `next()` of implementing classes."
    ]
   },
   {
