--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1836,7 +1836,9 @@
     "    - other default methods available for convenience too\n",
     "- `Collection<T>` is an interface that provides basic collection stuff like size, iterator, etc.\n",
     "    \n",
-    "The way iterators are set up is compatible with __laziness__ for things like streams or custom collections."
+    "The way iterators are set up is compatible with __laziness__ for things like streams or custom collections.\n",
+    "    \n",
+    "Note: an iterator isn't just for doing loops - it can be used as an __on-demand consumer__ too (eg. pass an iterator to recursive calls in Huffman decoding)."
    ]
   },
   {
@@ -3139,9 +3141,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "365d3a88",
+   "metadata": {},
+   "source": [
+    "# Reversing Ranges\n",
+    "\n",
+    "This is a cool feature of Python that Java doesn't do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c847a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReverseRangeDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer> l = new ArrayList<>();\n",
+    "        l.add(10);\n",
+    "        l.add(20);\n",
+    "        l.add(30);\n",
+    "        \n",
+    "        //l.subList(1, 0); // NO\n",
+    "        \n",
+    "        String s = \"hi there\";\n",
+    "        // s.substring(3, 2); // NO\n",
+    "    }\n",
+    "}\n",
+    "ReverseRangeDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e4e528",
+   "id": "7e637707",
    "metadata": {},
    "outputs": [],
    "source": []
