--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -24,6 +24,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bff2d4f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "15883448",
    "metadata": {},
@@ -740,7 +748,8 @@
     "- you __cannot call `collect()`__ on an IntStream\n",
     "    - but you can call `toArray()`\n",
     "    - you can call `boxed()` to make it into a `Stream<Integer>` which can then be collected\n",
-    "    - you can call `mapToObj` to provide a conversion to any reference type and get a `Stream<>` back"
+    "    - you can call `mapToObj` to provide a conversion to any reference type and get a `Stream<>` back\n",
+    "- `iterator()` gets a `PrimitiveIterator` which has a boxed `next()` and a primitive `nextInt()`"
    ]
   },
   {
@@ -2295,6 +2304,57 @@
     "    }\n",
     "}\n",
     "ArrayConversionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9607364",
+   "metadata": {},
+   "source": [
+    "# Array forEach/Iterator via Streams\n",
+    "\n",
+    "Use `Arrays.stream(arr).iterator()` or `Arrays.stream(arr).forEach()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa8abec9",
+   "metadata": {},
+   "source": [
+    "# Iterating a String Without Copying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ef316b9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "i\n",
+      " \n",
+      "t\n",
+      "h\n",
+      "e\n",
+      "r\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "class IterateString {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"hi there\";\n",
+    "        // s.iterator(); // NO\n",
+    "        \n",
+    "        s.chars().mapToObj(c -> (char)c).forEach(System.out::println);\n",
+    "    }\n",
+    "}\n",
+    "IterateString.main(null);"
    ]
   },
   {
