--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -715,6 +715,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95635279",
+   "metadata": {},
+   "source": [
+    "# Copy Between Collections Using Wildcard\n",
+    "\n",
+    "This is not really new information but a way of seeing it that might catch you off guard (as it did me in a practice problem).\n",
+    "\n",
+    "The first (invalid) example below doesn't work because a wildcard by default can be thought of as `? extends Object`, which means you can read and treat it as an `Object`, but you cannot write.  So the a variable cannot have a value written to it.\n",
+    "\n",
+    "The other 2 are valid because the variable is either locked to be the same between the two, or specified in a way that is safe with covariance/contravariance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "29e1ffc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CopyDemo {\n",
+    "    /*\n",
+    "    void f(List<?> a, List<?> b) {\n",
+    "        a.add(b.get(0));\n",
+    "    }\n",
+    "    */\n",
+    "    \n",
+    "    static <T> void f(List<T> a, List<T> b) {\n",
+    "        a.add(b.get(0));\n",
+    "    }\n",
+    "    \n",
+    "    static <T> void g(List<? super T> a, List<? extends T> b) {\n",
+    "        a.add(b.get(0));\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer> a = new ArrayList<>(Arrays.asList(1, 2, 3));\n",
+    "        f(a, Arrays.asList(1, 2, 3));\n",
+    "        g(a, Arrays.asList(1, 2, 3));\n",
+    "        \n",
+    "        System.out.println(a);\n",
+    "    }\n",
+    "}\n",
+    "CopyDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd74f806",
    "metadata": {},
    "source": [
@@ -815,7 +870,9 @@
     "        - so __contravariance is for writing__\n",
     "- wildcards cannot express both concepts at the same time\n",
     "\n",
-    "Note: contravariance is only for wildcards - you cannot do `<T super Number>` in a class declaration."
+    "Note: contravariance is only for wildcards - you cannot do `<T super Number>` in a class declaration.\n",
+    "\n",
+    "Note: you can always write `null` even without contravariance."
    ]
   },
   {
@@ -1269,9 +1326,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4f76aeb",
+   "metadata": {},
+   "source": [
+    "# Overloading Between Boxed and Generic Types\n",
+    "\n",
+    "Function overloading would prefer to match a boxed type instead of a generic type if it receives a primitive, but it would prefer to match a generic type instead of a primitive if it receives a boxed type.\n",
+    "\n",
+    "Declaration order doesn't affect this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "51aeac60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "oh no\n"
+     ]
+    }
+   ],
+   "source": [
+    "class OverloadTtest {\n",
+    "    <T> void f(T n) {System.out.println(\"oh no\");}\n",
+    "    void f(Integer n) {System.out.println(n);}\n",
+    "    \n",
+    "    <T> void g(T n) {System.out.println(\"oh no\");}\n",
+    "    void g(int n) {System.out.println(n);}\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        new OverloadTtest().f(10);\n",
+    "        new OverloadTtest().g(10);\n",
+    "        new OverloadTtest().g(Integer.valueOf(10));\n",
+    "    }\n",
+    "}\n",
+    "OverloadTtest.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e350f3",
+   "id": "9604b087",
    "metadata": {},
    "outputs": [],
    "source": []
