--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -154,6 +154,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5b8fa27",
+   "metadata": {},
+   "source": [
+    "# Scanner\n",
+    "\n",
+    "This is an alternative to the `BufferedReader` approach above.\n",
+    "\n",
+    "You construct it similarly (but less verbosely).\n",
+    "\n",
+    "It has more __overloads for types__ and will __throw__ if you get the type wrong.\n",
+    "\n",
+    "`next()`, `nextInt()`, etc. all read one token at a time delimitted by __whitespace__ which can include newline.  If the user enters multiple lines, it will read until it gets the token it needs.\n",
+    "\n",
+    "Uses regular expression `Pattern` objects for splitting, skipping, etc.  See documentation for more methods.\n",
+    "\n",
+    "Watch for `InputMismatchException`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e54aed25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30\n",
+      "10\n",
+      "20.0\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "class ScannerDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        try (Scanner scanner = new Scanner(System.in)) {\n",
+    "            int a = scanner.nextInt();\n",
+    "            double b = scanner.nextDouble();\n",
+    "            // if you keep hitting enter, it will keep reading until it has enough tokens\n",
+    "            String s = scanner.next();\n",
+    "            \n",
+    "            System.out.println(a);\n",
+    "            System.out.println(b);\n",
+    "            System.out.println(s);\n",
+    "            System.out.print(scanner.nextLine());\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "ScannerDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "619cf804",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "86366539",
    "metadata": {},
    "source": [
@@ -2357,9 +2421,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbc8afc7",
+   "metadata": {},
+   "source": [
+    "# Bitset\n",
+    "\n",
+    "A `BitSet` is like a `boolean[]` at the bit level, optimized for also doing bulk bitwise operations.  You could also see it as like a `Set<Integer>` where indices are present or not present.  It does __not inherit__ `Set` or `Iterable`.\n",
+    "\n",
+    "There are also operations for iterating over bits, counting set bits, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "48dcb037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 5}\n",
+      "true\n",
+      "{0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.BitSet;\n",
+    "\n",
+    "class BitSetDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        BitSet b = new BitSet();\n",
+    "        b.set(0);\n",
+    "        b.set(5);\n",
+    "        b.set(2,3); // range\n",
+    "        System.out.println(b);\n",
+    "        b.clear(2);\n",
+    "        b.flip(2);\n",
+    "        \n",
+    "        System.out.println(b.get(2));\n",
+    "        \n",
+    "        BitSet b2 = new BitSet();\n",
+    "        b2.set(0);\n",
+    "        b.and(b2);\n",
+    "        System.out.println(b);\n",
+    "    }\n",
+    "}\n",
+    "BitSetDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cba43e1",
+   "id": "daee6d45",
    "metadata": {},
    "outputs": [],
    "source": []
