--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1186,7 +1186,9 @@
     "\n",
     "Each operation is followed by a print statement to demonstrate the expected output.\n",
     "\n",
-    "Note: `append()` is overloaded for a lot of types."
+    "Note: `append()` is overloaded for a lot of types.\n",
+    "\n",
+    "Note: don't use `equals()` between a string and builder.  You need to convert with `toString()` before comparing."
    ]
   },
   {
@@ -1462,9 +1464,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d0663da",
+   "metadata": {},
+   "source": [
+    "# StringCharacterIterator\n",
+    "\n",
+    "`java.text.StringCharacterIterator` is not quite an iterator like in `java.util` but it has similar functionality.  It implements the `CharacterIterator` interface, which includes the constant `DONE`, which is a -1 character (invalid).\n",
+    "\n",
+    "You can construct with a whole string or part of a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "039529d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "i\n",
+      " \n",
+      "t\n",
+      "h\n",
+      "e\n",
+      "r\n",
+      "e\n",
+      "￿\n",
+      "e\n",
+      "r\n",
+      "e\n",
+      "h\n",
+      "t\n",
+      " \n",
+      "i\n",
+      "h\n",
+      "\n",
+      "h\n",
+      "e\n",
+      "7\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.text.StringCharacterIterator;\n",
+    "\n",
+    "class StringCharacterIteratorDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"hi there\";\n",
+    "        \n",
+    "        StringCharacterIterator iter = new StringCharacterIterator(s);\n",
+    "        while (iter.current() != StringCharacterIterator.DONE) {\n",
+    "            System.out.println(iter.current());\n",
+    "            iter.next(); // also returns the next value\n",
+    "        }\n",
+    "        \n",
+    "        System.out.println(StringCharacterIterator.DONE); // doesn't crash, but doesn't look good\n",
+    "        \n",
+    "        while (iter.previous() != StringCharacterIterator.DONE) {\n",
+    "            System.out.println(iter.current());\n",
+    "        }\n",
+    "        \n",
+    "        System.out.println();\n",
+    "        System.out.println(iter.first());\n",
+    "        System.out.println(iter.last()); // actually affects the index\n",
+    "        System.out.println(iter.getIndex());\n",
+    "        System.out.println(iter.getBeginIndex());\n",
+    "    }\n",
+    "}\n",
+    "StringCharacterIteratorDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbfd7004",
+   "id": "bc91c61c",
    "metadata": {},
    "outputs": [],
    "source": []
