Adding info about anonymous class as closure.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -2510,9 +2510,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae9a5793",
+   "metadata": {},
+   "source": [
+    "# Anonymous Class as Closure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "19eeb512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class AnonymousClassAsClosure {\n",
+    "    // concrete example\n",
+    "    static Iterable<Integer> getIterable() {\n",
+    "        int[] a = {1, 2, 3, 4, 5};\n",
+    "        \n",
+    "        var iterator = new Iterator<Integer>(){\n",
+    "            int index = 0;\n",
+    "            \n",
+    "            public boolean hasNext() {\n",
+    "                return index < a.length;\n",
+    "            }\n",
+    "            \n",
+    "            public Integer next() {\n",
+    "                return a[index++];\n",
+    "            }\n",
+    "        };\n",
+    "        \n",
+    "        return new Iterable<Integer>(){\n",
+    "           public Iterator<Integer> iterator() {\n",
+    "               return iterator;\n",
+    "           }\n",
+    "        };\n",
+    "    }\n",
+    "    \n",
+    "    // example showing generic usage\n",
+    "    static <T> Iterable<T> getIterableGenerically() {\n",
+    "        return new Iterable<>(){\n",
+    "          public Iterator<T> iterator() {\n",
+    "              return new Iterator<>(){\n",
+    "                public boolean hasNext() {\n",
+    "                    return false;\n",
+    "                }\n",
+    "                public T next() {\n",
+    "                    return null;\n",
+    "                }\n",
+    "              };\n",
+    "          }  \n",
+    "        };\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] argsg) {\n",
+    "        var iter = getIterable();\n",
+    "        iter.forEach(System.out::println);\n",
+    "    }\n",
+    "}\n",
+    "AnonymousClassAsClosure.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19eeb512",
+   "id": "51053eb1",
    "metadata": {},
    "outputs": [],
    "source": []
